ver 0.21 (not yet released)
* protocol
  - "tagtypes" can be used to hide tags
  - "find" and "search" can sort
  - "outputs" prints the plugin name
  - "outputset" sets runtime attributes
  - close connection when client sends HTTP request
* input
  - qobuz: new plugin to play Qobuz streams
  - tidal: new plugin to play Tidal streams
* tags
  - new tags "OriginalDate", "MUSICBRAINZ_WORKID"
* decoder
  - gme: try loading m3u sidecar files
  - hybrid_dsd: new decoder plugin
  - pcm: support audio/L24 (RFC 3190)
* resampler
  - soxr: flush resampler at end of song
* output
  - alsa: non-blocking mode
  - alsa: change "dop" and "allowed_formats" settings at runtime
  - ao: fix crash bug due to partial frames
  - shout: support the Shine encoder plugin
  - sndio: remove support for the broken RoarAudio sndio emulation
* mixer
  - sndio: new mixer plugin
* require GCC 5.0

ver 0.20.18 (2018/02/24)
* input
  - curl: allow authentication methods other than "Basic"
* decoder
  - flac: improve seeking precision
* fix gapless CUE song transitions
* Android, Windows
  - enable the NFS storage plugin

ver 0.20.17 (2018/02/11)
* output
  - alsa: fix crash bug with 8 channels
* mixer
  - alsa: fix rounding error at volume 0
* fix real-time and idle scheduling with Musl
* Android
  - fix compatibility with Android 4.0

ver 0.20.16 (2018/02/03)
* output
  - pulse: fix crash during auto-detection
* database
  - simple: fix search within mount points
  - upnp: enable IPv6
* archive
  - iso9660: libcdio 2.0 compatibility
* fix crash in debug build on Haiku and other operating systems

ver 0.20.15 (2018/01/05)
* queue: fix crash after seek failure
* resampler
  - soxr: clear internal state after manual song change
* state file
  - make mount point restore errors non-fatal
  - fix crash when restoring mounts with incompatible database plugin
* Android
  - build without Ant
  - fix for SIGSYS crash

ver 0.20.14 (2018/01/01)
* database