@@ -930,6 +930,7 @@ Player::SongBorder() noexcept
 	const bool border_pause = pc.ApplyBorderPause();
 	if (border_pause) {
 		paused = true;
+		pc.listener.OnBorderPause();
 		idle_add(IDLE_PLAYER);
 	}
 }
